fixed even more text colour display issues for dark mode on about.html

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1066,6 +1066,12 @@ table {
 td, th {
   border: 1px solid #dddddd;
 }
+.about_edu_work_edu_college_p{
+  color: var(--nav-text-colour);
+}
+.about_edu_work_work_ex_p{
+  color: var(--nav-text-colour);
+}
 .about_edu_work_work_ex_p_2{
   color: var(--nav-text-colour);
 }
